--- a/index.html
+++ b/index.html
@@ -387,10 +387,10 @@
                     <div class="col-xl-6 col-md-6">
                         <div class="socail_links">
                             <ul>
-                                <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                <li><a href="#"> <i class="fa fa-twitter"></i> </a></li>
-                                <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
-                                <li><a href="#"> <i class="fa fa-google-plus"></i> </a></li>
+                                <li><a href="https://www.facebook.com/iavinash.khatri"> <i class="fa fa-facebook"></i> </a></li>
+                                <li><a href="https://twitter.com/Avinashk31"> <i class="fa fa-twitter"></i> </a></li>
+                                <li><a href="https://www.instagram.com/amkhatri31/"> <i class="fa fa-instagram"></i> </a></li>
+                                <li><a href="https://github.com/Amkhatri31"> <i class="fa fa-github"></i> </a></li>
                             </ul>
                         </div>
                     </div>
