--- a/index.html
+++ b/index.html
@@ -253,9 +253,9 @@
                 <div class="col-xl-6 col-md-6">
                     <div class="about_e_details">
                         <h3>About me</h3>
-                        <p>I am a 3rd Year CE/CS student studying at Vadodara Institute of Enginerring doing B.E. and living in Vadodara.</p>
+                        <p>I am a Software Developer.</p>
                         <div class="download_cv">
-                            <a class="boxed-btn3" href="https://drive.google.com/file/d/1bc1nFAEekMzsvGyyG8KH0n4epdpdBwvJ/view?usp=sharing">Download CV</a>
+                            <a class="boxed-btn3" href="https://drive.google.com/file/d/1nidjIZ5KKuk8m9J8Hjgf064giIBL3zi5/view?usp=sharing">Download CV</a>
                         </div>
                     </div>
                 </div>
